--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,16 @@
 body {
   padding-top: 60px;
 }
-.product-list{
-
+.nav{
+    margin-right:20px;
+}
+.nav li a{
+    margin-top: 10px;
+    color:#fff !important;
+    padding:3px 7px;
+}
+.container{
+    min-height: 420px;  
 }
 .product-list .item{
     list-style-type: none;
@@ -15,3 +23,10 @@ body {
 .product-list .item img{
     width:100%;
 }
+footer{
+	background-color: #ccc;
+	padding:20px;
+	color: #000;
+	margin-top:30px;
+}
+
