--- a/partials/cart.html
+++ b/partials/cart.html
@@ -12,61 +12,27 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Product 1</td>
+                <tr ng-repeat="item in storage.cart">
+                    <td>{{item.name}}</td>
                     <td>
                         <div class="form-group col-md-3">
-                            <input type="number" class="form-control" value="1" min="1" />
+                            <input type="number" class="form-control" value="1" min="1" ng-model="item.quantity" />
                         </div>
                     </td>
                     <td>
-                        $222
+                        {{item.price}}
                     </td>
                     <td>
-                        $xxx
+                        {{item.price * item.quantity}}
                     </td>
                     <td>
-                        <a href="#" class="text-danger"><i class="fa fa-close"></i></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Product 1</td>
-                    <td>
-                        <div class="form-group col-md-3">
-                            <input type="number" class="form-control" value="1" min="1" />
-                        </div>
-                    </td>
-                    <td>
-                        $222
-                    </td>
-                    <td>
-                        $xxx
-                    </td>
-                    <td>
-                        <a href="#" class="text-danger"><i class="fa fa-close"></i></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Product 1</td>
-                    <td>
-                        <div class="form-group col-md-3">
-                            <input type="number" class="form-control" value="1" min="1" />
-                        </div>
-                    </td>
-                    <td>
-                        $222
-                    </td>
-                    <td>
-                        $xxx
-                    </td>
-                    <td>
-                        <a href="#" class="text-danger"><i class="fa fa-close"></i></a>
+                        <a ng-click="removeProduct($index)" class="text-danger"><i class="fa fa-close"></i></a>
                     </td>
                 </tr>
             </tbody>
         </table>
         <div class="pull-left">
-            <button type="button" name="button" class="btn btn-primary">Continue shopping</button>
+            <a class="btn btn-primary" href="#/">Continue shopping</a>
         </div>
         <div class="pull-right">
             <p>
@@ -78,7 +44,7 @@
             <p>
                 <span>Total: </span><span>$xxx</span>
             </p>
-            <button type="button" name="button" class="btn btn-success">check out</button>
+            <a href="#/checkout" class="btn btn-success">Check out</a>
         </div>
     </div>
 </div>
